force-app/main/default/objects/VG_ReInsurance__c/VG_ReInsurance__c.object-meta.xml
<CustomObject>
    <label>Capacity Bordereaux</label>
    <nameField>
        <label>ReInsurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capacity Bordereaux</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>