force-app/main/default/objects/VG_ReInsurance__c/fields/Ceded_Sum_Insured__c.field-meta.xml
<CustomField>
    <fullName>Ceded_Sum_Insured__c</fullName>
    <formula>VG_Policy_Schedule__r.Sum_Insured__c * Participation_Ceded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceded Sum Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>