force-app/main/default/objects/VG_ReInsurance__c/fields/Ceded_Sum_Insured_USD__c.field-meta.xml
<CustomField>
    <fullName>Ceded_Sum_Insured_USD__c</fullName>
    <formula>Ceded_Sum_Insured__c / UMR_Specific_Exchange_Rates_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceded Sum Insured (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>