force-app/main/default/objects/VG_ReInsurance__c/fields/Final_Net_Premium__c.field-meta.xml
<CustomField>
    <fullName>Final_Net_Premium__c</fullName>
    <formula>Net_Premium_to_Capacity__c  -  VG_RI_IPT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Net Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>