force-app/main/default/objects/VG_ReInsurance__c/fields/MGA_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>MGA_Commission_Percent__c</fullName>
    <formula>IF(VG_RI_Premium__c = 0,0,VG_MGA_Commission_Amount__c  /  VG_RI_Premium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MGA Commission (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>