force-app/main/default/objects/VG_ReInsurance__c/fields/Net_MGA_Commission__c.field-meta.xml
<CustomField>
    <fullName>Net_MGA_Commission__c</fullName>
    <formula>VG_MGA_Commission_Amount__c  - Brokerage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net MGA Commission</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>