force-app/main/default/objects/VG_ReInsurance__c/fields/Net_MGA_Commission_percent__c.field-meta.xml
<CustomField>
    <fullName>Net_MGA_Commission_percent__c</fullName>
    <formula>IF(VG_RI_Premium__c = 0, 0, Net_MGA_Commission__c / VG_RI_Premium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net MGA Commission (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>