force-app/main/default/objects/VG_ReInsurance__c/fields/Net_Premium_to_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Net_Premium_to_Capacity__c</fullName>
    <formula>VG_RI_Premium__c + VG_RI_IPT__c -  VG_RI_Binder_Commission_Amount__c  -  VG_MGA_Commission_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Premium to Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>