force-app/main/default/objects/VG_ReInsurance__c/fields/Net_Premium_to_London__c.field-meta.xml
<CustomField>
    <fullName>Net_Premium_to_London__c</fullName>
    <formula>VG_RI_Premium__c  +  VG_RI_IPT__c -  VG_MGA_Commission_Amount__c  -  VG_Brokerage_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Premium to London</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>