force-app/main/default/objects/VG_ReInsurance__c/fields/Participation_Ceded__c.field-meta.xml
<CustomField>
    <fullName>Participation_Ceded__c</fullName>
    <formula>IF(ISBLANK(Share_Override__c), VG_UMR__r.VG_RI_Share__c, Share_Override__c)</formula>
    <label>Participation % ceded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>