force-app/main/default/objects/VG_ReInsurance__c/fields/Share_Override__c.field-meta.xml
<CustomField>
    <fullName>Share_Override__c</fullName>
    <label>Cession Share (%) Override</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>