force-app/main/default/objects/VG_ReInsurance__c/fields/UMR_Specific_Exchange_Rates_USD__c.field-meta.xml
<CustomField>
    <fullName>UMR_Specific_Exchange_Rates_USD__c</fullName>
    <label>UMR Specific Exchange Rates (USD)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>