force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Binder_Broker__c.field-meta.xml
<CustomField>
    <fullName>VG_Binder_Broker__c</fullName>
    <formula>VG_UMR__r.VG_RI_Binder_Broker__r.Name</formula>
    <label>Binder Broker</label>
    <type>Text</type>
</CustomField>