force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Binder_Broker_Commission_USD__c.field-meta.xml
<CustomField>
    <fullName>VG_Binder_Broker_Commission_USD__c</fullName>
    <formula>VG_RI_Binder_Commission_Amount__c /  UMR_Specific_Exchange_Rates_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Binder Broker Commission (USD)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>