force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Brokerage_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>VG_Brokerage_Amount_USD__c</fullName>
    <formula>Brokerage_Amount__c /  UMR_Specific_Exchange_Rates_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amount (USD)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>