force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Ceded_IPT_USD__c.field-meta.xml
<CustomField>
    <fullName>VG_Ceded_IPT_USD__c</fullName>
    <formula>VG_RI_IPT__c / UMR_Specific_Exchange_Rates_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceded IPT (USD)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>