force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Commission__c.field-meta.xml
<CustomField>
    <fullName>VG_Commission__c</fullName>
    <formula>IF(VG_Policy_Schedule__r.Gross_Written_Premium__c = 0,0,VG_MGA_Commission_Amount__c  /  VG_Policy_Schedule__r.Gross_Written_Premium__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>