force-app/main/default/objects/VG_ReInsurance__c/fields/VG_IS_Standard_Currency_Used__c.field-meta.xml
<CustomField>
    <fullName>VG_IS_Standard_Currency_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Exchange Rate Used</label>
    <type>Checkbox</type>
</CustomField>