force-app/main/default/objects/VG_ReInsurance__c/fields/VG_IsTempDelete__c.field-meta.xml
<CustomField>
    <fullName>VG_IsTempDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsTempDelete</label>
    <type>Checkbox</type>
</CustomField>