force-app/main/default/objects/VG_ReInsurance__c/fields/VG_MGA_Commission_Override__c.field-meta.xml
<CustomField>
    <fullName>VG_MGA_Commission_Override__c</fullName>
    <label>MGA Commission Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>