force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Status__c</fullName>
    <formula>Text(VG_Policy_Schedule__r.Policy__r.Policy_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Status</label>
    <type>Text</type>
</CustomField>