force-app/main/default/objects/VG_ReInsurance__c/fields/VG_RI_Currency__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Currency__c</fullName>
    <formula>TEXT(  VG_Policy_Schedule__r.CurrencyIsoCode  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Currency</label>
    <type>Text</type>
</CustomField>