force-app/main/default/objects/VG_ReInsurance__c/fields/VG_RI_IPT__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_IPT__c</fullName>
    <formula>VG_Policy_Schedule__r.IPT__c * Participation_Ceded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceded IPT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>