force-app/main/default/objects/VG_ReInsurance__c/fields/VG_RI_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_RI_Premium__c</fullName>
    <formula>IF(ISPICKVAL( VG_UMR__r.VG_RI_Type__c , &apos;Gross&apos;) , VG_Policy_Schedule__r.Gross_Written_Premium__c * Participation_Ceded__c, IF(ISPICKVAL( VG_UMR__r.VG_RI_Type__c , &apos;Net&apos;), ( VG_Policy_Schedule__r.Gross_Written_Premium__c - VG_Policy_Schedule__r.VG_Brokerage_Amount__c )*Participation_Ceded__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ceded Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>