force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Status__c.field-meta.xml
<CustomField>
    <fullName>VG_Status__c</fullName>
    <formula>IF( VG_Policy_Schedule__r.VG_Is_MTA__c ,  TEXT(VG_Policy_Schedule__r.VG_Status__c) ,IF( VG_Policy_Schedule__r.VG_Base_Policy__c,  TEXT(VG_Policy_Schedule__r.Policy__r.Policy_Status__c),&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>