force-app/main/default/objects/VG_ReInsurance__c/fields/VG_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Type__c</fullName>
    <formula>IF( VG_Policy_Schedule__r.VG_Is_MTA__c ,  TEXT(VG_Policy_Schedule__r.VG_MTA_Type__c) ,  IF( VG_Policy_Schedule__r.VG_Base_Policy__c ,  &quot;Base Policy&quot; , &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>