force-app/main/default/objects/VG_ReInsurance__c/fields/VG_UMR__c.field-meta.xml
<CustomField>
    <fullName>VG_UMR__c</fullName>
    <label>Unique Market Reference</label>
    <referenceTo>VG_UMR__c</referenceTo>
    <relationshipLabel>Capacity Bordereaux</relationshipLabel>
    <relationshipName>ReInsurances</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>