force-app/main/default/objects/VG_ReInsurance__c/fields/Year_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Account__c</fullName>
    <formula>YEAR( VG_UMR__r.VG_RI_Inception_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year of Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>