force-app/main/default/objects/VG_ReInsurance__c/validationRules/CB_Name_Updation.validationRule-meta.xml
<ValidationRule>
    <fullName>CB_Name_Updation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) , ISCHANGED( Name ) )</errorConditionFormula>
    <errorMessage>Cannot change Capacity Bordereaux number</errorMessage>
</ValidationRule>