force-app/main/default/objects/VG_ReInsurance__c/validationRules/Commission_Override_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Commission_Override_editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( VG_MGA_Commission_Override__c ) , ISPICKVAL( VG_Policy_Schedule__r.VG_Status__c , &apos;Booked&apos;) )</errorConditionFormula>
    <errorMessage>Cannot override commission once policy schedule is booked</errorMessage>
</ValidationRule>